# excel-mcp

./: .gitignore  ENHANCEMENTS.md  MCP_CLIENT_CONFIG.md  Procfile  Quotation Forms Test cases__AlEtihad.xlsx  README.md  RENDER_DEPLOYMENT.md  cursor_excel_config.json  cursor_minimal_config.json  excel_fastmcp_server.py  pyproject.toml  render.yaml  requirements.txt  test_server.py
