[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-excel-server"
version = "1.0.0"
description = "MCP server for Excel file operations"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.0"
]

[project.scripts]
mcp-excel-server = "excel_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-excel-server"
Repository = "https://github.com/yourusername/mcp-excel-server.git"

[tool.setuptools]
py-modules = ["excel_server"]